[package]
name = "ndarray-ndimage"
version = "0.1.2"
authors = ["Nil Goyette <nil.goyette@imeka.ca>"]
edition = "2018"

repository = "https://github.com/imeka/ndarray-ndimage"
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Multidimensional image processing for ArrayBase, the n-dimensional array data structure provided by ndarray."
keywords = ["array", "image", "multidimensional", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = { version="0.15", features = ["approx"] }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
approx = "0.4"
